feat(service_order): customer accept and reject endpoints
