# internal/infra/handler/service_order/handler.go
@@ -5,6 +5,7 @@ import (
 	"strings"
 
 	"github.com/POS-FIAP-15SOAT-TEAM-DARK-MODE/auto-repair-shop/internal/domain"
+	"github.com/POS-FIAP-15SOAT-TEAM-DARK-MODE/auto-repair-shop/internal/pkg/auth"
 	"github.com/POS-FIAP-15SOAT-TEAM-DARK-MODE/auto-repair-shop/internal/pkg/json"
 	"github.com/POS-FIAP-15SOAT-TEAM-DARK-MODE/auto-repair-shop/internal/pkg/logger"
 	"github.com/POS-FIAP-15SOAT-TEAM-DARK-MODE/auto-repair-shop/internal/pkg/web"
@@ -258,5 +259,65 @@ func (h *handler) SendToCustomerApproval(c *gin.Context) {
 		return
 	}
 
-	c.Status(http.StatusAccepted)
+	c.Status(http.StatusNoContent)
+}
+
+func (h *handler) Accept(c *gin.Context) {
+	ctx := c.Request.Context()
+	id := strings.TrimSpace(c.Param(serviceOrderIDParam))
+	if id == "" {
+		status, response := web.Error(domain.ErrInvalidServiceOrderId)
+		c.JSON(status, response)
+		return
+	}
+
+	userClaims, err := auth.GetClaimsFromHeader(c.Request)
+	if err != nil {
+		status, response := web.Error(err)
+		c.JSON(status, response)
+		return
+	}
+
+	if err = h.svc.Accept(ctx, id, userClaims.UserId); err != nil {
+		status, response := web.Error(err)
+		logger.Of(ctx).Debug("send service order to customer approval failed",
+			zap.String("operation", "send_service_order_to_customer_approval"),
+			zap.Error(err),
+			zap.String("entity", "service_order"),
+		)
+		c.JSON(status, response)
+		return
+	}
+
+	c.Status(http.StatusNoContent)
+}
+
+func (h *handler) Reject(c *gin.Context) {
+	ctx := c.Request.Context()
+	id := strings.TrimSpace(c.Param(serviceOrderIDParam))
+	if id == "" {
+		status, response := web.Error(domain.ErrInvalidServiceOrderId)
+		c.JSON(status, response)
+		return
+	}
+
+	userClaims, err := auth.GetClaimsFromHeader(c.Request)
+	if err != nil {
+		status, response := web.Error(err)
+		c.JSON(status, response)
+		return
+	}
+
+	if err = h.svc.Reject(ctx, id, userClaims.UserId); err != nil {
+		status, response := web.Error(err)
+		logger.Of(ctx).Debug("send service order to customer approval failed",
+			zap.String("operation", "send_service_order_to_customer_approval"),
+			zap.Error(err),
+			zap.String("entity", "service_order"),
+		)
+		c.JSON(status, response)
+		return
+	}
+
+	c.Status(http.StatusNoContent)
 }
